--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,8 @@
     ]
   },
   "require": {
-    "coffeecode/datalayer": "1.1.8"
+    "coffeecode/datalayer": "1.1.8",
+    "ext-json": "*",
+    "ext-pdo": "*"
   }
 }
